# parishkit

./: .gitignore  CLAUDE.md  README.md  install.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md  parishsoft-api-analysis.md
docs/specs/: README.md
docs/specs/intro/: spec.md
docs/specs/pk-create-ps-ministry-rosters/: spec.md
docs/specs/pk-cron-runner/: spec.md
docs/specs/pk-print-ps-ministries/: spec.md
docs/specs/pk-query-ps-memfam/: spec.md
docs/specs/pk-sync-ps-to-cc/: spec.md
docs/specs/pk-sync-ps-to-ggroup/: spec.md
docs/specs/pk-validate-gcalendar-reservations/: spec.md
scripts/calendar-reservations/: README.md  example-config.yaml
scripts/pk-create-ps-ministry-rosters/: README.md  example-config.yaml  pk-create-ps-ministry-rosters.py
scripts/pk-cron-runner/: README.md  example-config.yaml  pk-cron-runner.py
scripts/pk-print-ps-ministries/: README.md  example-config.yaml  pk-print-ps-ministries.py
scripts/pk-query-ps-memfam/: README.md  example-config.yaml  pk-query-ps-memfam.py
scripts/pk-sync-ps-to-cc/: README.md  example-config.yaml  pk-sync-ps-to-cc.py
scripts/pk-sync-ps-to-ggroup/: README.md  example-config.yaml  pk-sync-ps-to-ggroup.py
scripts/pk-validate-gcalendar-reservations/: README.md  example-config.yaml  pk-validate-gcalendar-reservations.py
scripts/run/: README.md  example-config.yaml  parishkit-run.py
scripts/smoke-tests/: README.md  constant-contact-device-oauth.py  constant-contact-lists.py  google-api.py  google-workspace-email.py  parishsoft-connectivity.py  slack-notification.py
src/parishkit/: auth.py  calendar_reservations.py  cli.py  config.py  constant_contact.py  files.py  logging.py  parishsoft.py  parishsoft_runtime.py  pk_create_ps_ministry_rosters.py  pk_cron_runner.py  pk_print_ps_ministries.py  pk_query_ps_memfam.py  pk_sync_ps_to_cc.py  pk_sync_ps_to_ggroup.py  pk_validate_gcalendar_reservations.py  retry.py  runner.py
src/parishkit/email/: base.py  google_workspace.py  ms365.py
src/parishkit/google/: auth.py  calendar.py  drive.py  groups.py  sheets.py
tests/: test_calendar_reservations.py  test_cli_common.py  test_cli_entrypoints.py  test_config.py  test_constant_contact.py  test_create_ministry_rosters.py  test_email_providers.py  test_files.py  test_google_helpers.py  test_install.py  test_logging.py  test_parishsoft.py  test_prepare_release.py  test_print_tools.py  test_retry.py  test_runner.py  test_script_wrappers.py  test_sync_google_group.py  test_sync_ps_to_cc.py
tools/: prepare-release.py
