[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "parishkit"
version = "0.1.0"
description = "Parish-neutral operations automation tools."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PyYAML>=6.0.2",
  "requests>=2.32.0",
]

[project.scripts]
pk-cron-runner = "parishkit.cli:run_main"
pk-query-ps-memfam = "parishkit.cli:print_member_main"
pk-print-ps-ministries = "parishkit.cli:print_ministries_main"
pk-validate-gcalendar-reservations = "parishkit.cli:calendar_reservations_main"
pk-create-ps-ministry-rosters = "parishkit.cli:create_ministry_rosters_main"
pk-sync-ps-to-ggroup = "parishkit.cli:sync_google_group_main"
pk-sync-ps-to-cc = "parishkit.cli:sync_ps_to_cc_main"

[project.optional-dependencies]
google = [
  "google-api-python-client>=2.139.0",
  "google-auth>=2.33.0",
  "google-auth-httplib2>=0.2.0",
  "google-auth-oauthlib>=1.2.1",
]
slack = [
  "slack_sdk>=3.31.0",
]
dev = [
  "build>=1.2.0",
  "pymarkdownlnt>=0.9.38",
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/parishkit"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
